After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743660 - Pressing Ctrl should not start a search in the file chooser
Pressing Ctrl should not start a search in the file chooser
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
3.15.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
Federico Mena Quintero
Depends on:
Blocks:
 
 
Reported: 2015-01-28 16:42 UTC by Michael Catanzaro
Modified: 2017-06-21 09:45 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Michael Catanzaro 2015-01-28 16:42:15 UTC
* Open a GtkFileChooser in some app (I tested with gedit and gnome-builder)
* Press Ctrl.

Actual result: the folders are replaced with a search bar.
Expected result: nothing should happen.

Traditionally, we used Ctrl to allow selecting multiple files at a time to open. That's no longer possible.